--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,39 @@
 body {
+
 	background-color: black;
+
 }
 
 .mainContainer {
-	border-radius: 2px;
+
+	border-radius: 10px;
 	border: 2px solid;
 	background-color: #FFFFFF;
-	height: 300px;
 	width: 600px;
 	margin: 100px auto;
 
 }
+
+.contentContainer {
+
+	padding: 20px 40px;
+
+}
+
+
+.tweetIcon {
+	height: 70px;
+	width: 70px;
+	float: left;
+	margin-right: 20px;
+}
+
+.tweetNameContainer {
+
+}
+
+.tweetIcon,
+.tweetNameContainer {
+	display: inline;
+}
+
