tidying HTML/CSS and creating object for data

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body {
-
 	background-color: black;
 	font-family: Helvetica Neue;
 	color: #292f33;
+}
+
+.contentContainer {
+	padding: 30px 40px;
 }
 
 .mainContainer {
@@ -14,13 +17,41 @@ body {
 	transform: translate(-50%, -50%);
 }
 
+.red {
+	color: red;
+}
+
+.tweetContent {
+	clear: both;
+	font-size: 26px;
+	line-height: 32px;
+	font-weight: 300;
+	letter-spacing: .01em;
+	margin: 0 0 10px 0;
+}
+
+.tweetDateTime {
+	font-size: 13px;
+}
+
+.tweetDateTime, 
+.tweetTag {
+	color: #8899a6;
+}
+
+.tweetDateTime,
+.tweetName,
+.tweetTag {
+	margin: 0;
+}
+
 .tweetHeadContainer {
 	overflow: auto;
 	margin-bottom: 15px;
 }
 
-.contentContainer {
-	padding: 30px 40px;
+.tweetTag {
+	font-size: 14px;
 }
 
 .userIcon {
@@ -34,37 +65,5 @@ body {
 .userIcon,
 .userNameContainer {
 	display: inline;
-}
-
-.tweetName {
-	margin: 0;
-}
-
-.tweetTag {
-	margin: 0;
-	font-size: 14px;
-}
-
-.tweetContent {
-	clear: both;
-	font-size: 26px;
-	line-height: 32px;
-	font-weight: 300;
-	letter-spacing: .01em;
-	margin: 0 0 10px 0;
-}
-
-.tweetDateTime, 
-.tweetTag {
-	color: #8899a6;
-}
-
-.tweetDateTime {
-	font-size: 13px;
-	margin: 0;
-}
-
-.red {
-	color: red;
 }
 
